tests/negative/test_block_bare_has_type.orb
fnc main () () {
    block::bare i32 {
        pass 0;
    };
};